[workspace]
members = ["crates/hurl-lib", "crates/hurl-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["HURL Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/hurl/hurl"

[workspace.dependencies]
reqwest = { version = "0.11", features = ["json", "stream", "cookies", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
base64 = "0.21"
tokio = { version = "1.0", features = ["full"] }
colored = "2.0"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
url = "2.4"
md5 = "0.7"
flate2 = "1.0"
brotli = "3.3"
