[package]
name = "hurl-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "hurl"
path = "src/main.rs"

[dependencies]
hurl-lib = { path = "../hurl-lib" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
colored.workspace = true
anyhow.workspace = true
thiserror.workspace = true
regex.workspace = true
uuid = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url.workspace = true

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"
